<resources>
    <string name="app_name">LealApp Treinos Academy - MVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lougout">Logout</string>
    <string name="descricao_do_treino">descricao do treino</string>
    <string name="nome_do_treino">nome do treino</string>
    <string name="cadastrar_treino">Cadastrar treino</string>
    <string name="salvando_treino">salvando treino...</string>
    <string name="treino">Treino</string>
    <string name="atualizando_treino">atualizando treino...</string>

    <string name="title_home">Treinos Academy - HOME</string>
    <string name="subtitle_home">Nossos Treinos e Exercícios - MVVM</string>

    <string name="title_cadastrotreino">Treinos Academy - CADASTRO</string>
    <string name="subtitle_cadastrotreino">Cadastro de Treino - MVVM</string>
    <string name="title_listtreinos">Treinos Academy - LISTA</string>
    <string name="subtitle_listtreinos">Atualize | Exclua | Cadastre - MVVM</string>

    <string name="title_cadastro_exercicio">Treino Academy - CADASTRO</string>
    <string name="title_update_exercicio">Treino Academy - ATUALIZAR</string>
    <string name="subtitle_cadastro_exercicio">Cadastro Exercício - MVVM</string>
    <string name="title_listexercicio">Treinos Academy - LISTA</string>
    <string name="subtitle_listexercicio">Atualize | Exclua | Cadastre - MVVM</string>
    <string name="nome_do_exercicio">nome do exercício</string>
    <string name="observacao_exercicio">observação exercício</string>
    <string name="cadastrar_cadastrar_exercício">Cadastrar Exercício</string>
    <string name="aguarde">salvando dados aguarde...</string>

</resources>