<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_treino"
        android:inputType="text"
        android:text="" />

    <EditText
        android:id="@+id/edit_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descricao_do_treino"
        android:inputType="text"
        android:text="" />


    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_treino"
        android:textAllCaps="false" />


    <TextView
        android:id="@+id/txv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="pauloceami@gmail.com | github.com/PauloCeami"
        android:textAlignment="center"
        android:textColor="#AAAAAA"
        android:textSize="12sp" />
</androidx.appcompat.widget.LinearLayoutCompat>