<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imv_exercicio"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/img_foto" />

    <TextView
        android:id="@+id/txv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="clique para selecionar uma imagem" />

    <EditText
        android:id="@+id/edit_nome_exercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:hint="@string/nome_do_exercicio"
        android:inputType="text"
        android:text="" />

    <EditText
        android:id="@+id/edit_observacao_exercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/observacao_exercicio"
        android:inputType="text"
        android:text="" />

    <Spinner
        android:id="@+id/sp_treinos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="50dp" />


    <Button
        android:id="@+id/btn_cadastrar_exercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_cadastrar_exercício"
        android:textAllCaps="false" />


    <TextView
        android:id="@+id/txv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="pauloceami@gmail.com | github.com/PauloCeami"
        android:textAlignment="center"
        android:textColor="#AAAAAA"
        android:textSize="12sp" />
</androidx.appcompat.widget.LinearLayoutCompat>